<resources>
    <string name="app_name">MenusExample</string>
    <string name="item1">item1</string>
    <string name="item2">item2</string>
    <string name="item3">item3</string>
    <string name="item4">item4</string>
    <string name="item5">item5</string>
    <string name="item6">item6</string>
    <string name="item7">item7</string>
    <string name="select_a_menu">Select a Menu</string>
    <string name="change_menu">Update Menu</string>
    <string name="item8">item8</string>
    <string name="bg">bg</string>
    <string name="wifi_anim">wifi_anim</string>
</resources>
