<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/item1"
        android:orderInCategory="100"
        android:icon="@drawable/ic_android_black_24dp"
        android:title="@string/item1"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/item2"
        android:orderInCategory="200"
        android:title="@string/item2"
        android:icon="@drawable/ic_keyboard_voice_black_24dp"
        app:showAsAction="never" />
    <item
        android:id="@+id/item3"
        android:orderInCategory="300"
        android:title="@string/item3"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/item4"
                android:orderInCategory="100"
                android:title="@string/item4"
                app:showAsAction="never" />

            <item
                android:id="@+id/item5"
                android:orderInCategory="100"
                android:title="@string/item5"
                app:showAsAction="never" />
            <item
                android:id="@+id/item7"
                android:orderInCategory="100"
                android:title="@string/item7"
                app:showAsAction="never" />
        </menu>
    </item>
    <item
        android:id="@+id/item6"
        android:orderInCategory="200"
        android:title="@string/item6"
        android:visible="false"
        app:showAsAction="never" />
    <item
        android:id="@+id/item8"
        android:orderInCategory="300"
        android:title="@string/item8"
        app:showAsAction="never" />
</menu>